--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
   box-sizing: border-box;
   font-family: "Roboto", sans-serif;
   cursor: default;
+  scrollbar-width: none;
 }
 
 html, body, #root{
